--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ericbusing.github.io/portfolio-main",
   "name": "portfoliotemplate",
   "version": "2.0.0",
   "private": true,
@@ -36,7 +37,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -59,10 +59,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "name": "my-app",
-    "version": "0.1.0",
-    "homepage": "https://gitname.github.io/react-gh-pages",
-    "private": "true"
+    "gh-pages": "^4.0.0"
   }
 }
