--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ericbusing.github.io/portfolio-main",
+  "homepage": "https://ericbusing.github.io/Portfolio-main",
   "name": "portfoliotemplate",
   "version": "2.0.0",
   "private": true,
